integrations/salesforce-agentforce/force-app/main/default/objects/Plynf_Config__mdt/Plynf_Config__mdt.object-meta.xml
<CustomObject>
    <label>Plynf Config</label>
    <pluralLabel>Plynf Configs</pluralLabel>
</CustomObject>