integrations/salesforce-agentforce/force-app/main/default/objects/Plynf_Config__mdt/fields/API_Key__c.field-meta.xml
<CustomField>
    <fullName>API_Key__c</fullName>
    <description>Plynf API key. Treat as a secret — store via Setup → Custom Metadata Types only.</description>
    <label>API Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>