integrations/salesforce-agentforce/force-app/main/default/objects/Plynf_Config__mdt/fields/Default_Model__c.field-meta.xml
<CustomField>
    <fullName>Default_Model__c</fullName>
    <description>Default LLM model name for the proxy (cost calculation).</description>
    <label>Default Model</label>
    <length>64</length>
    <type>Text</type>
</CustomField>