integrations/salesforce-agentforce/force-app/main/default/objects/Plynf_Config__mdt/fields/Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Endpoint__c</fullName>
    <description>Base URL of the Plynf proxy, e.g. https://app.plynf.com</description>
    <label>Endpoint</label>
    <length>255</length>
    <required>true</required>
    <type>Url</type>
</CustomField>